fix: apply overflow-x hidden to html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,14 @@
     --light-color: #F8FAFC;
 }
 
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body {
     background-color: var(--light-color);
     font-family: 'Lato', sans-serif;
-    max-width: 100svw;
-    overflow-x: hidden;
 }
 
 h1 {
